gitops/landing-page/goalora-landing-page-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: goalora-landing-page
  labels:
    app: goalora-landing-page
    app.kubernetes.io/component: goalora-landing-page
    app.kubernetes.io/instance: goalora-landing-page
    app.kubernetes.io/name: goalora-landing-page
    app.kubernetes.io/part-of: goalora-landing-page
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: goalora-landing-page
    deployment: goalora-landing-page
