gitops/landing-page/goalora-landing-page-base-rt.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: goalora-landing-page-ssl
  labels:
    app: goalora-landing-page
    app.kubernetes.io/component: goalora-landing-page
    app.kubernetes.io/instance: goalora-landing-page
    app.kubernetes.io/name: goalora-landing-page
    app.kubernetes.io/part-of: goalora-landing-page
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  host: goalora.com
  to:
    kind: Service
    name: goalora-landing-page
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFHDCCBASgAwIBAgISA3skiiy8Hic1b01BAXudzuf5MA0GCSqGSIb3DQEBCwUA
[...]
      oKaDnqckDcyq/zQoLV0G0A==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCtXxAOIqeZzjnT
[...]
      fVPNCZcEC8ph0w9Jcv7/TvlZ
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFHDCCBASgAwIBAgISA3skiiy8Hic1b01BAXudzuf5MA0GCSqGSIb3DQEBCwUA
[...]
      oKaDnqckDcyq/zQoLV0G0A==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
