gitops/landing-page/goalora-landing-page-www-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: goalora-landing-page-www
  labels:
    app: goalora-landing-page
    app.kubernetes.io/component: goalora-landing-page
    app.kubernetes.io/instance: goalora-landing-page
    app.kubernetes.io/name: goalora-landing-page
    app.kubernetes.io/part-of: goalora-landing-page
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  host: www.goalora.com
  to:
    kind: Service
    name: goalora-landing-page
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFHzCCBAegAwIBAgISAwwND2ZYwSwIoB6cfvkGTXA8MA0GCSqGSIb3DQEBCwUA
[...]
      ZBQRb3T2i6eQD/xaHR45HeFISg==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCoE0wKq2nGKVt0
[...]
      nagdELae5eNbwvo8Ic1IwpgM
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFHzCCBAegAwIBAgISAwwND2ZYwSwIoB6cfvkGTXA8MA0GCSqGSIb3DQEBCwUA
[...]
      ZBQRb3T2i6eQD/xaHR45HeFISg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
